--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -10,8 +10,11 @@
         <table>
             {% for item in items %}
                 <tr>
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.done }}</td>
+                    {% if item.done %}
+                        <td><strike>{{ item.name}}</strike></td>
+                    {% else %}
+                        <td>{{} iten.name}</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
