--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -7,6 +7,24 @@
     </head>
     <body>
         <h1>Add an ToDo Item:</h1>
+        <form method="Post" action="add">
+            <div>
+                <p>
+                    <label for="id_name">Name: </label>
+                    <input type="text" id="id_name" name="item_name">
+                </p>
+            </div>
+            <div>
+                <label for="id_done">Done: </label>
+                <input type="checkbox" id="id_done" name="done">
+            </div>
+            <div>
+                <p>
+                    <button type="submit">Add Item</button>
+                </p>
+            </div>
+
+        </form>
        
     </body>
     </html>
